Fixed background sizes on smaller res

--- a/css/casestudy.css
+++ b/css/casestudy.css
@@ -29,7 +29,7 @@
     overflow: hidden;
     box-shadow: inset 0 0 300px #000;
     text-shadow: 0 0 1px black;
-    background-size: 100%;
+    background-size: cover;
 }
 .intro small {
     text-transform: uppercase;
@@ -91,5 +91,5 @@
 .intro-banner {
     padding: 30px;
     background: #000;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.7);
 }
